# customer360-platform

./: .gitignore  README.md  pytest.ini
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  exception_handlers.py  exceptions.py  logging.py
apps/api/app/core/security/: jwt.py  password.py
apps/api/app/database/: base.py  dependencies.py  session.py
apps/api/app/entrypoints/: http.py
apps/api/app/modules/auth/: router.py  schemas.py  service.py
apps/api/app/modules/customers/: model.py  models.py  repository.py  router.py  schema.py  schemas.py  service.py
apps/api/app/modules/health/: router.py  service.py
apps/api/app/modules/users/: models.py  repository.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 1f4a23832aea_create_users_table.py  2348b64370c3_create_customers_table.py  fa24b64d9cb4_make_customer_timestamps_timezone_aware.py
docs/: decision-log.md
docs/adr/: ADR-001-feature-based-architecture.md  ADR-002-postgresql-as-primary-database.md  ADR-003-soft-delete-strategy.md
docs/adr/docs/adr/: ADR-004-module-naming-conventions.md
docs/architecture/: overview.md
docs/design/: customers.md
docs/journal/: 001-data-types.md
docs/knowledge_base/backend/: exception_handling.md  logging.md  repository-pattern.md
docs/knowledge_base/database/: data-types.md
infra/: docker-compose.yml
tests/: conftest.py
tests/api/: test_customers.py  test_health.py
